--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Please wait while you are redirected...</p>
     <script>
         setTimeout(function() {
-            window.location.href = "application/controllers/home.php";
+            <img src="<?php echo base_url();?>/assets/global/ds.png" style="margin: 18px 18px; width: 160px;" />
         }, 5000); // 5000 milliseconds = 5 seconds
     </script>
 </body>
